[package]
name = "codenest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
diesel = { version = "2.1.5", features = ["mysql"] }
dotenvy = "0.15.7"
futures = "0.3.30"
serde = "1.0.197"
tokio = { version = "1.37.0", features = ["full"] }
